2007-05-08  Martin Leidig  <mleidig@schlund.de>

	Fixed "multiple getWriter() call problem", which could occur when an 
	exception is thrown during the writing of a JSON response, which in
	turn can trigger a ServletException and a second getWriter() call.

	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java: Don't throw
	ServletException if HttpServletResponse is already committed.
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java: Ensure
	that Writers are closed before returning to the caller.

2007-05-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/testsuite/util/TargetGeneratorBenchmarkFactory.java: 
	* src/de/schlund/pfixcore/testsuite/util/TargetGeneratorBenchmarkUtil.java: 
	* stuff/targetgenbenchmark/runbenchmark.sh: 
	Created benchmark utility for TargetGenerator.
	
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryService.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/TargetFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/PagesResourceImpl.java: 
	* projects/core/editor2/txt/pages/main_pages.xml: 
	Fixed editor problems that occured when a page was not listed in navigation or
	a page was listed in navigation but no target existed.

2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/build/create_ajpconf.xsl: 
	* projects/core/build/create_apacheconf.xsl: 
	* projects/core/build/create_jkconf.xsl: 
	* skel/build-skel.xml: 
	Added support for mod_proxy_ajp

2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/BuildTimePropTask.java (execute): 
	Make ant properties available using "__antprop_" prefix.

2007-04-20  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: Check