@@ -474,6 +474,7 @@ public abstract class AbstractXMLServlet extends ServletManager {
         String errtxt;
         try {
             if ((err = spdoc.getResponseError()) != 0) {
+                setCookies(spdoc,res);
                 if ((errtxt = spdoc.getResponseErrorText()) != null) {
                     res.sendError(err, errtxt);
                 } else {
@@ -518,19 +519,7 @@ public abstract class AbstractXMLServlet extends ServletManager {
                 SessionAdmin.getInstance().touchSession(servletname, stylesheet, session);
             }
             // Only process cookies if we don't reuse
-            if (spdoc.getCookies() != null && ! spdoc.getCookies().isEmpty()) {
-                if (LOGGER.isDebugEnabled()) {
-                    LOGGER.debug("*** Sending cookies ***");
-                }
-                // Now adding the Cookies from spdoc
-                for (Iterator i = spdoc.getCookies().iterator(); i.hasNext();) {
-                    Cookie cookie = (Cookie) i.next();
-                    if (LOGGER.isDebugEnabled()) {
-                        LOGGER.debug("    Add cookie: " + cookie);
-                    }
-                    res.addCookie(cookie);
-                }
-            }
+            setCookies(spdoc,res);
         }
         
         boolean modified_or_no_etag = true;
@@ -858,6 +847,22 @@ public abstract class AbstractXMLServlet extends ServletManager {
             boolean ok = temporary_dir.mkdirs();
             if (LOGGER.isInfoEnabled()) {
                 LOGGER.info(temporary_dir.getPath() + " did not exist. Created now. Sucess:" + ok);
+            }
+        }
+    }
+    
+    private void setCookies(SPDocument spdoc,HttpServletResponse res) {
+        if (spdoc.getCookies() != null && ! spdoc.getCookies().isEmpty()) {
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("*** Sending cookies ***");
+            }
+            // Now adding the Cookies from spdoc
+            for (Iterator i = spdoc.getCookies().iterator(); i.hasNext();) {
+                Cookie cookie = (Cookie) i.next();
+                if (LOGGER.isDebugEnabled()) {
+                    LOGGER.debug("    Add cookie: " + cookie);
+                }
+                res.addCookie(cookie);
             }
         }
     }
